# pi-sense-server

./: .gitignore  pi_sense_server.service  pyproject.toml  tempserver.conf
pi_sense_server/: app.py  sensors.py
tests/: test_pi_sense_server.py
