[tool.poetry]
name = "pi-sense-server"
version = "0.1.0"
description = ""
authors = ["Sam Morley <41870650+inakleinbottle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
